# serve_md

./: Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: build.yaml  test.yaml
binary/parse_md/: Cargo.toml
binary/parse_md/src/: main.rs
binary/serve_md/: Cargo.toml
binary/serve_md/src/: main.rs
crates/async/: Cargo.toml
crates/async/src/: lib.rs
crates/core/: Cargo.toml
crates/core/resources/: config.toml  hio.md  test.md
crates/core/src/: formats.rs  lib.rs  matter.rs  plugin.rs  state.rs
crates/core/tests/: integration_tests.rs
src/: formats.rs  lib.rs  main.rs  matter.rs  plugin.rs  state.rs
