[package]
name = "serve_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.3.23", features = ["derive"] }
gray_matter = "0.2.6"
hyper = { version = "0.14.27", features = ["full"] }
pulldown-cmark = "0.9.3"
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
