[package]
name = "serve_md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
clap = { version = "4.3.23", features = ["derive"] }
emojis = "0.6.1"
features = "0.10.0"
gray_matter = "0.2.6"
hyper = { version = "0.14.27", features = ["full"] }
pulldown-cmark = "0.9.3"
regex = "1.9.4"
serde = "1.0.188"
serde-pickle = "1.1.1"
serde_derive = "1.0.188"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
