[package]
name = "serve_md"
version = "0.1.0"
edition = "2021"

[dependencies]
serve_md_core = { path = "../../crates/core", features = ["server"] }
clap = { version = "4.3.23", features = ["derive"] }
serve_md_async = { path = "../../crates/async" }
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"
