[package]
name = "serve_md_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.23", features = ["derive"] }
emojis = "0.6.1"
features = "0.10.0"
gray_matter = "0.2.6"
pulldown-cmark = "0.9.3"
regex = "1.9.4"
serde = "1.0.188"
serde-pickle = "1.1.1"
serde_derive = "1.0.188"
serde_json = "1.0.105"
serde_yaml = "0.9.25"
toml = "0.8.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
server = []